Increased size of navbar and made it span over the whole width. Fixed wrong colors in dark theme.

--- a/frontend/src/components/Navbar/BottomHeader.module.css
+++ b/frontend/src/components/Navbar/BottomHeader.module.css
@@ -1,15 +1,13 @@
 .navbar {
-  height: 4rem;
+  height: 4.5rem;
   box-shadow: var(--mantine-shadow-sm);
-}
-
-.logoLine {
-  padding: 0.75rem 0;
 }
 
 .logo {
   height: 3rem;
-  padding-right: 1.25rem;
+  padding-right: 1rem;
+  padding-left: 0.25rem;
+  filter: brightness(0) invert(1);
 }
 
 .container {
@@ -23,8 +21,8 @@
 
 .title {
   text-decoration: none;
-  width: 12.5rem;
+  width: 20rem;
   color: var(--mantine-color-white);
   font-weight: 400;
-  font-size: 1.25rem;
+  font-size: 2rem;
 }
