--- a/frontend/src/components/Navbar/ExternalNav.module.css
+++ b/frontend/src/components/Navbar/ExternalNav.module.css
@@ -5,7 +5,7 @@
   text-align: right;
   display: initial;
   cursor: pointer;
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   line-height: 1.75rem;
   text-transform: uppercase;
   font-weight: 500;
